basis-universal-sys/vendor/transcode_basis_wrapper.h

    // A copy of basist::basisu_file_info with problematic fields removed
    struct BasisUniversalFileInfo
    {
        void reset(basist::basisu_file_info file_info) {
            m_version = file_info.m_version;
            m_total_header_size = file_info.m_total_header_size;

            m_total_selectors = file_info.m_total_selectors;
            m_selector_codebook_ofs = file_info.m_selector_codebook_ofs;
            m_selector_codebook_size = file_info.m_selector_codebook_size;

            m_total_endpoints = file_info.m_total_endpoints;
            m_endpoint_codebook_ofs = file_info.m_endpoint_codebook_ofs;
            m_endpoint_codebook_size = file_info.m_endpoint_codebook_size;

            m_tables_ofs = file_info.m_tables_ofs;
            m_tables_size = file_info.m_tables_size;

            m_slices_size = file_info.m_slices_size;

            m_tex_type = file_info.m_tex_type;
            m_us_per_frame = file_info.m_us_per_frame;

            m_total_images = file_info.m_total_images;

            m_userdata0 = file_info.m_userdata0;
            m_userdata1 = file_info.m_userdata1;

            m_tex_format = file_info.m_tex_format;

            m_y_flipped = file_info.m_y_flipped;
            m_etc1s = file_info.m_etc1s;
            m_has_alpha_slices = file_info.m_has_alpha_slices;
        }

        uint32_t m_version;
        uint32_t m_total_header_size;

        uint32_t m_total_selectors;
        uint32_t m_selector_codebook_ofs;
        uint32_t m_selector_codebook_size;

        uint32_t m_total_endpoints;
        uint32_t m_endpoint_codebook_ofs;
        uint32_t m_endpoint_codebook_size;

        uint32_t m_tables_ofs;
        uint32_t m_tables_size;

        uint32_t m_slices_size;

        basist::basis_texture_type m_tex_type;
        uint32_t m_us_per_frame;

        // Low-level slice information (1 slice per image for color-only basis files, 2 for alpha basis files)
        //basist::basisu_slice_info_vec m_slice_info;

        uint32_t m_total_images;	 // total # of images
        //std::vector<uint32_t> m_image_mipmap_levels; // the # of mipmap levels for each image

        uint32_t m_userdata0;
        uint32_t m_userdata1;

        basist::basis_tex_format m_tex_format; // ETC1S, UASTC, etc.

        bool m_y_flipped;				// true if the image was Y flipped
        bool m_etc1s;					// true if the file is ETC1S
        bool m_has_alpha_slices;	// true if the texture has alpha slices (for ETC1S: even slices RGB, odd slices alpha)
    };
    //
    // basisu_transcoder
    //
    struct BasisUniversalTranscoder {
        basist::basisu_transcoder *pTranscoder;
    };
    BasisUniversalTranscoder *basis_universal_transcoder_new() {
        BasisUniversalTranscoder *transcoder = new BasisUniversalTranscoder;
        transcoder->pTranscoder = new basist::basisu_transcoder();
        return transcoder;
    }
    void basis_universal_transcoder_delete(BasisUniversalTranscoder *transcoder) {
        delete transcoder->pTranscoder;
        delete transcoder;
    }
    // Validates the .basis file. This computes a crc16 over the entire file, so it's slow.
    bool basis_universal_transcoder_validate_file_checksums(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size, bool full_validation) {
        return transcoder->pTranscoder->validate_file_checksums(pData, data_size, full_validation);
    }
    // Quick header validation - no crc16 checks.
    bool basis_universal_transcoder_validate_header(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size) {
        return transcoder->pTranscoder->validate_header(pData, data_size);
    }
    basist::basis_texture_type basis_universal_transcoder_get_texture_type(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size) {
        return transcoder->pTranscoder->get_texture_type(pData, data_size);
    }
    bool basis_universal_transcoder_get_userdata(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size, uint32_t &userdata0, uint32_t &userdata1) {
        return transcoder->pTranscoder->get_userdata(pData, data_size, userdata0, userdata1);
    }
    // Returns the total number of images in the basis file (always 1 or more).
    // Note that the number of mipmap levels for each image may differ, and that images may have different resolutions.
    uint32_t basis_universal_transcoder_get_total_images(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size) {
        return transcoder->pTranscoder->get_total_images(pData, data_size);
    }
    basist::basis_tex_format basis_universal_transcoder_get_tex_format(const BasisUniversalTranscoder *transcoder, const void* pData, uint32_t data_size) {
        return transcoder->pTranscoder->get_basis_tex_format(pData, data_size);
    }
    // Returns the number of mipmap levels in an image.
    uint32_t basis_universal_transcoder_get_total_image_levels(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size, uint32_t image_index) {
        return transcoder->pTranscoder->get_total_image_levels(pData, data_size, image_index);
    }
    // Returns basic information about an image. Note that orig_width/orig_height may not be a multiple of 4.
    bool basis_universal_transcoder_get_image_level_desc(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size, uint32_t image_index, uint32_t level_index, uint32_t &orig_width, uint32_t &orig_height, uint32_t &total_blocks) {
        return transcoder->pTranscoder->get_image_level_desc(pData, data_size, image_index, level_index, orig_width, orig_height, total_blocks);
    }
    // Returns information about the specified image.
    bool basis_universal_transcoder_get_image_info(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size, basist::basisu_image_info &image_info, uint32_t image_index) {
        return transcoder->pTranscoder->get_image_info(pData, data_size, image_info, image_index);
    }
    // Returns information about the specified image's mipmap level.
    bool basis_universal_transcoder_get_image_level_info(const BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size, basist::basisu_image_level_info &level_info, uint32_t image_index, uint32_t level_index) {
        return transcoder->pTranscoder->get_image_level_info(pData, data_size, level_info, image_index, level_index);
    }
    // Get a description of the basis file and low-level information about each slice.
    bool basis_universal_transcoder_get_file_info(BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size, BasisUniversalFileInfo &file_info) {
        basist::basisu_file_info fi;
        if (!transcoder->pTranscoder->get_file_info(pData, data_size, fi)) {
            return false;
        }

        file_info.reset(fi);
        return true;
    }
    // start_transcoding() must be called before calling transcode_slice() or transcode_image_level().
    // For ETC1S files, this call decompresses the selector/endpoint codebooks, so ideally you would only call this once per .basis file (not each image/mipmap level).
    bool basis_universal_transcoder_start_transcoding(BasisUniversalTranscoder *transcoder, const void *pData, uint32_t data_size) {
        return transcoder->pTranscoder->start_transcoding(pData, data_size);
    }
    bool basis_universal_transcoder_stop_transcoding(BasisUniversalTranscoder *transcoder) {
        return transcoder->pTranscoder->stop_transcoding();
    }
    // Returns true if start_transcoding() has been called.
    bool basis_universal_transcoder_get_ready_to_transcode(const BasisUniversalTranscoder *transcoder) {
        return transcoder->pTranscoder->get_ready_to_transcode();
    }