basis-universal-sys/src/transcoding.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of basist_ktx2_image_level_info"]
        [::std::mem::size_of::<basist_ktx2_image_level_info>() - 52usize];
    ["Alignment of basist_ktx2_image_level_info"]
        [::std::mem::align_of::<basist_ktx2_image_level_info>() - 4usize];
    ["Offset of field: basist_ktx2_image_level_info::m_level_index"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_level_index) - 0usize];
    ["Offset of field: basist_ktx2_image_level_info::m_layer_index"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_layer_index) - 4usize];
    ["Offset of field: basist_ktx2_image_level_info::m_face_index"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_face_index) - 8usize];
    ["Offset of field: basist_ktx2_image_level_info::m_orig_width"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_orig_width) - 12usize];
    ["Offset of field: basist_ktx2_image_level_info::m_orig_height"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_orig_height) - 16usize];
    ["Offset of field: basist_ktx2_image_level_info::m_width"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_width) - 20usize];
    ["Offset of field: basist_ktx2_image_level_info::m_height"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_height) - 24usize];
    ["Offset of field: basist_ktx2_image_level_info::m_num_blocks_x"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_num_blocks_x) - 28usize];
    ["Offset of field: basist_ktx2_image_level_info::m_num_blocks_y"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_num_blocks_y) - 32usize];
    ["Offset of field: basist_ktx2_image_level_info::m_block_width"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_block_width) - 36usize];
    ["Offset of field: basist_ktx2_image_level_info::m_block_height"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_block_height) - 40usize];
    ["Offset of field: basist_ktx2_image_level_info::m_total_blocks"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_total_blocks) - 44usize];
    ["Offset of field: basist_ktx2_image_level_info::m_alpha_flag"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_alpha_flag) - 48usize];
    ["Offset of field: basist_ktx2_image_level_info::m_iframe_flag"]
        [::std::mem::offset_of!(basist_ktx2_image_level_info, m_iframe_flag) - 49usize];
};
#[repr(C)]
pub struct basist_ktx2_transcoder_state {
    pub m_transcoder_state: basist_basisu_transcoder_state,
    pub m_level_uncomp_data: basisu_uint8_vec,
    pub m_uncomp_data_level_index: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of basist_ktx2_transcoder_state"]
        [::std::mem::size_of::<basist_ktx2_transcoder_state>() - 848usize];
    ["Alignment of basist_ktx2_transcoder_state"]
        [::std::mem::align_of::<basist_ktx2_transcoder_state>() - 8usize];
    ["Offset of field: basist_ktx2_transcoder_state::m_transcoder_state"]
        [::std::mem::offset_of!(basist_ktx2_transcoder_state, m_transcoder_state) - 0usize];
    ["Offset of field: basist_ktx2_transcoder_state::m_level_uncomp_data"]
        [::std::mem::offset_of!(basist_ktx2_transcoder_state, m_level_uncomp_data) - 816usize];
    ["Offset of field: basist_ktx2_transcoder_state::m_uncomp_data_level_index"][::std::mem::offset_of!(
        basist_ktx2_transcoder_state,
        m_uncomp_data_level_index
    ) - 840usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct BasisUniversalFileInfo {
    pub m_version: u32,
    pub m_total_header_size: u32,
    pub m_total_selectors: u32,
    pub m_selector_codebook_ofs: u32,
    pub m_selector_codebook_size: u32,
    pub m_total_endpoints: u32,
    pub m_endpoint_codebook_ofs: u32,
    pub m_endpoint_codebook_size: u32,
    pub m_tables_ofs: u32,
    pub m_tables_size: u32,
    pub m_slices_size: u32,
    pub m_tex_type: basist_basis_texture_type,
    pub m_us_per_frame: u32,
    pub m_total_images: u32,
    pub m_userdata0: u32,
    pub m_userdata1: u32,
    pub m_tex_format: basist_basis_tex_format,
    pub m_y_flipped: bool,
    pub m_etc1s: bool,
    pub m_has_alpha_slices: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BasisUniversalFileInfo"][::std::mem::size_of::<BasisUniversalFileInfo>() - 72usize];
    ["Alignment of BasisUniversalFileInfo"]
        [::std::mem::align_of::<BasisUniversalFileInfo>() - 4usize];
    ["Offset of field: BasisUniversalFileInfo::m_version"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_version) - 0usize];
    ["Offset of field: BasisUniversalFileInfo::m_total_header_size"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_total_header_size) - 4usize];
    ["Offset of field: BasisUniversalFileInfo::m_total_selectors"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_total_selectors) - 8usize];
    ["Offset of field: BasisUniversalFileInfo::m_selector_codebook_ofs"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_selector_codebook_ofs) - 12usize];
    ["Offset of field: BasisUniversalFileInfo::m_selector_codebook_size"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_selector_codebook_size) - 16usize];
    ["Offset of field: BasisUniversalFileInfo::m_total_endpoints"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_total_endpoints) - 20usize];
    ["Offset of field: BasisUniversalFileInfo::m_endpoint_codebook_ofs"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_endpoint_codebook_ofs) - 24usize];
    ["Offset of field: BasisUniversalFileInfo::m_endpoint_codebook_size"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_endpoint_codebook_size) - 28usize];
    ["Offset of field: BasisUniversalFileInfo::m_tables_ofs"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_tables_ofs) - 32usize];
    ["Offset of field: BasisUniversalFileInfo::m_tables_size"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_tables_size) - 36usize];
    ["Offset of field: BasisUniversalFileInfo::m_slices_size"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_slices_size) - 40usize];
    ["Offset of field: BasisUniversalFileInfo::m_tex_type"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_tex_type) - 44usize];
    ["Offset of field: BasisUniversalFileInfo::m_us_per_frame"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_us_per_frame) - 48usize];
    ["Offset of field: BasisUniversalFileInfo::m_total_images"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_total_images) - 52usize];
    ["Offset of field: BasisUniversalFileInfo::m_userdata0"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_userdata0) - 56usize];
    ["Offset of field: BasisUniversalFileInfo::m_userdata1"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_userdata1) - 60usize];
    ["Offset of field: BasisUniversalFileInfo::m_tex_format"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_tex_format) - 64usize];
    ["Offset of field: BasisUniversalFileInfo::m_y_flipped"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_y_flipped) - 68usize];
    ["Offset of field: BasisUniversalFileInfo::m_etc1s"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_etc1s) - 69usize];
    ["Offset of field: BasisUniversalFileInfo::m_has_alpha_slices"]
        [::std::mem::offset_of!(BasisUniversalFileInfo, m_has_alpha_slices) - 70usize];
};
#[repr(C)]
#[repr(align(8))]
#[derive(Debug, Copy, Clone)]
pub struct BasisUniversalTranscoder {
    pub _bindgen_opaque_blob: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BasisUniversalTranscoder"]
        [::std::mem::size_of::<BasisUniversalTranscoder>() - 8usize];
    ["Alignment of BasisUniversalTranscoder"]
        [::std::mem::align_of::<BasisUniversalTranscoder>() - 8usize];
};
unsafe extern "C" {
    pub fn basis_universal_transcoder_new() -> *mut BasisUniversalTranscoder;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_delete(transcoder: *mut BasisUniversalTranscoder);
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_validate_file_checksums(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
        full_validation: bool,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_validate_header(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_texture_type(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
    ) -> basist_basis_texture_type;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_userdata(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
        userdata0: *mut u32,
        userdata1: *mut u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_total_images(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
    ) -> u32;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_tex_format(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
    ) -> basist_basis_tex_format;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_total_image_levels(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
        image_index: u32,
    ) -> u32;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_image_level_desc(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
        image_index: u32,
        level_index: u32,
        orig_width: *mut u32,
        orig_height: *mut u32,
        total_blocks: *mut u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_image_info(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
        image_info: *mut basist_basisu_image_info,
        image_index: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_image_level_info(
        transcoder: *const BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
        level_info: *mut basist_basisu_image_level_info,
        image_index: u32,
        level_index: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_file_info(
        transcoder: *mut BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
        file_info: *mut BasisUniversalFileInfo,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_start_transcoding(
        transcoder: *mut BasisUniversalTranscoder,
        pData: *const ::std::os::raw::c_void,
        data_size: u32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_stop_transcoding(
        transcoder: *mut BasisUniversalTranscoder
    ) -> bool;
}
unsafe extern "C" {
    pub fn basis_universal_transcoder_get_ready_to_transcode(
        transcoder: *const BasisUniversalTranscoder
    ) -> bool;
}
